--- a/src/views/pages/dashboard.html
+++ b/src/views/pages/dashboard.html
@@ -46,7 +46,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
                 </button>
 
-                <a href="#" class="lg:hidden">
+                <a href="./dashboard.html" class="lg:hidden">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
                 </a>
             </div>
@@ -54,7 +54,7 @@
             <div class="flex-grow overflow-y-auto">
                 <div class="p-4">
                     <div>
-                        <a href="#loggedinMenu" class="flex items-center justify-between w-full">
+                        <a href="#loggedinMenu" data-menu-toggle class="flex items-center justify-between w-full">
                             <h6 class="font-semibold text-white">ADMIN GANTENG</h6>
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg>
                         </a>
@@ -223,12 +223,12 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./myreferralcommisions.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Referrals Commissions
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./levelcommissions.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Level Commissions
                                     </a>
                                 </li>
