--- a/src/views/pages/topuphistory.html
+++ b/src/views/pages/topuphistory.html
@@ -54,7 +54,7 @@
             <div class="flex-grow overflow-y-auto">
                 <div class="p-4">
                     <div>
-                        <a href="#loggedinMenu" class="flex items-center justify-between w-full">
+                        <a href="#loggedinMenu" data-menu-toggle class="flex items-center justify-between w-full">
                             <h6 class="font-semibold text-white">ADMIN GANTENG</h6>
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg>
                         </a>
@@ -222,12 +222,12 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./myreferralcommisions.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Referrals Commissions
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./levelcommissions.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Level Commissions
                                     </a>
                                 </li>
